# invenio-aisearch

./: .editorconfig  .gitignore  ARCHITECTURE.md  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  README_INTEGRATION.md  REFACTORING_NOTES.md  SESSION5_SIMILAR_UI.md  babel.ini  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_aisearch/: __init__.py  api_views.py  blueprints.py  cli.py  config.py  ext.py  jobs.py  models.py  query_parser.py  search_service.py  tasks.py  views.py  webpack.py
invenio_aisearch/assets/semantic-ui/js/invenio_aisearch/: passages.js  search.js  similar.js
invenio_aisearch/index_templates/: __init__.py
invenio_aisearch/index_templates/os-v2/: __init__.py  rdmrecords_knn.json
invenio_aisearch/records/: __init__.py
invenio_aisearch/records/dumpers/: __init__.py  embedding.py
invenio_aisearch/records/mappings/os-v2/rdmrecords/records/: record-v6.0.0.json
invenio_aisearch/resources/: __init__.py  config.py
invenio_aisearch/resources/resource/: __init__.py  ai_search_resource.py
invenio_aisearch/services/: __init__.py  config.py  results.py  schemas.py
invenio_aisearch/services/service/: __init__.py  ai_search_service.py
invenio_aisearch/templates/invenio_aisearch/: base.html  index.html  passages.html  search.html  similar.html
scripts/: setup_models.py
tests/: README.md  conftest.py  test_api.py  test_basic.py  test_dumper.py  test_index_template.py  test_integration.py  test_invenio_aisearch.py  test_service.py  test_views.py
